updating date font size to stop occasional overflow

--- a/css/events.css
+++ b/css/events.css
@@ -91,7 +91,7 @@ section {
 	background:#AAB30D;
 	float:left;
 	padding:20px;
-	font-size: 25px;
+	font-size: 24px;
 	line-height:125%;
 	text-transform: uppercase;
 	text-align: center;
